# mysqlproxy

./: CMakeLists.txt  main.cpp  packet.h
src/connection/: Connection.cpp  Connection.h
src/mysqlpacket/: MySQLHandshakePacket.cpp  MySQLHandshakePacket.h  MySQLPacket.cpp  MySQLPacket.h
src/server/: MainServer.cpp  MainServer.h  Worker.cpp  Worker.h
src/utils/: IDGenerator.h
